@@ -8,22 +8,23 @@ import java.util.Random;
 public class Deck {
     private final List<Card> cards;
     private final Random random;
-    private final int NUMBER_OD_DESKS = 8;
+    private final int NUMBER_OD_DECKS = 8;
 
     public Deck() {
         this.cards = new ArrayList<>();
-        this.random = new Random(); // или new Random(42) для тестов
-        for (int i = 0; i < NUMBER_OD_DESKS; i++) {
-            fillAndShuffle();
-        }
+        this.random = new Random(); // или new Random(42
+        fillAndShuffle();
     }
 
     private void fillAndShuffle() {
-        for (Suit suit : Suit.values()) {
-            for (Rank rank : Rank.values()) {
-                cards.add(new Card(suit, rank));
+        for (int i = 0; i < NUMBER_OD_DECKS; i++) {
+            for (Suit suit : Suit.values()) {
+                for (Rank rank : Rank.values()) {
+                    cards.add(new Card(suit, rank));
+                }
             }
         }
+
         Collections.shuffle(cards, random);
     }
 
@@ -31,7 +32,7 @@ public class Deck {
         if (cards.isEmpty()) {
             reset();
         }
-        return cards.removeLast();
+        return cards.remove(cards.size() - 1);
     }
 
     private void reset() {
